1. 新增 run.bat 脚本支持直接基于脚本启动（根路径需要java安装包支持） 2. 更新readme